# ktp-common-internals

./: .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KTpConfig.cmake.in  Mainpage.dox  Messages.sh  circular-countdown.cpp  circular-countdown.h  error-dictionary.cpp  error-dictionary.h  global-presence.cpp  global-presence.h  global.cpp  kpresence.cpp  kpresence.h  presence.cpp  presence.h  service-availability-checker.cpp  service-availability-checker.h  telepathy-handler-application.cpp  telepathy-handler-application.h  text-parser.cpp  text-parser.h  version.h.in  wallet-interface.cpp  wallet-interface.h
KTelepathy/: CMakeLists.txt  circular-countdown.h  error-dictionary.h  global-presence.cpp  global-presence.h  ktelepathy-export.h  presence.cpp  presence.h  service-availability-checker.h  telepathy-handler-application.h  text-parser.cpp  text-parser.h  wallet-interface.h
KTelepathy/Models/: CMakeLists.txt  accounts-filter-model.cpp  accounts-filter-model.h  accounts-model-item.cpp  accounts-model-item.h  accounts-model.cpp  accounts-model.h  contact-model-item.cpp  contact-model-item.h  groups-model-item.cpp  groups-model-item.h  groups-model.cpp  groups-model.h  proxy-tree-node.cpp  proxy-tree-node.h  tree-node.cpp  tree-node.h
KTp/: CMakeLists.txt  Doxyfile.cmake  abstract-message-filter.cpp  abstract-message-filter.h  account-factory.cpp  account-factory_p.h  actions.cpp  actions.h  capabilities-hack-private.cpp  capabilities-hack-private.h  circular-countdown.cpp  circular-countdown.h  contact-factory.cpp  contact-factory.h  contact-info-dialog.cpp  contact-info-dialog.h  contact.cpp  contact.h  conversation.cpp  conversation.h  core.cpp  core.h  debug.cpp  debug.h  error-dictionary.cpp  error-dictionary.h  global-contact-manager.cpp  global-contact-manager.h  global-presence.cpp  global-presence.h  im-persons-data-source.cpp  im-persons-data-source.h  ktelepathy-export.h  ktp-debug.h  ktp-export.h  ktp-metatypes.h  logs-importer-private.cpp  logs-importer-private.h  logs-importer.cpp  logs-importer.h  (+35 more)
KTp/Declarative/: CMakeLists.txt  channel-delegator.h  contact-list.cpp  contact-list.h  contact-pin.cpp  contact-pin.h  conversation-queue-manager.cpp  conversation-queue-manager.h  conversation-target.cpp  conversation-target.h  conversation.cpp  conversation.h  conversations-model.cpp  conversations-model.h  debug.cpp  debug.h  declarative-ktp-actions.cpp  declarative-ktp-actions.h  emojis-model.cpp  emojis-model.h  emojis.h  filtered-pinned-contacts-proxy-model.cpp  filtered-pinned-contacts-proxy-model.h  hide-window-component.cpp  hide-window-component.h  mainlogmodel.cpp  mainlogmodel.h  messages-model.cpp  messages-model.h  pinned-contacts-model.cpp  pinned-contacts-model.h  qml-plugins.cpp  qml-plugins.h  qmldir  telepathy-manager.cpp  telepathy-manager.h  telepathy-text-observer.cpp  telepathy-text-observer.h  text-area-emojis-handler.cpp  text-area-emojis-handler.h
KTp/Logger/: CMakeLists.txt  abstract-logger-plugin.cpp  abstract-logger-plugin.h  debug.cpp  debug.h  ktp_logger_plugin.desktop  log-entity.cpp  log-entity.h  log-manager-private.h  log-manager.cpp  log-manager.h  log-message.cpp  log-message.h  log-search-hit.cpp  log-search-hit.h  logmanager.cpp  logmanager.h  pending-logger-dates-impl.cpp  pending-logger-dates-impl.h  pending-logger-dates.cpp  pending-logger-dates.h  pending-logger-entities-impl.cpp  pending-logger-entities-impl.h  pending-logger-entities.cpp  pending-logger-entities.h  pending-logger-logs-impl.cpp  pending-logger-logs-impl.h  pending-logger-logs.cpp  pending-logger-logs.h  pending-logger-operation.cpp  pending-logger-operation.h  pending-logger-search-impl.cpp  pending-logger-search-impl.h  pending-logger-search.cpp  pending-logger-search.h  scrollback-manager.cpp  scrollback-manager.h
KTp/Models/: CMakeLists.txt  abstract-grouping-proxy-model.cpp  abstract-grouping-proxy-model.h  accounts-filter-model.cpp  accounts-filter-model.h  accounts-list-model.cpp  accounts-list-model.h  accounts-model-item.cpp  accounts-model-item.h  accounts-model.cpp  accounts-model.h  accounts-tree-proxy-model.cpp  accounts-tree-proxy-model.h  capabilities-hack-private.h  contact-model-item.cpp  contact-model-item.h  contacts-filter-model.cpp  contacts-filter-model.h  contacts-list-model.cpp  contacts-list-model.h  contacts-model.cpp  contacts-model.h  debug.cpp  debug.h  flat-model-proxy.cpp  groups-model-item.cpp  groups-model-item.h  groups-model.cpp  groups-model.h  groups-tree-proxy-model.cpp  groups-tree-proxy-model.h  kpeopletranslationproxy.cpp  kpeopletranslationproxy.h  presence-model.cpp  presence-model.h  proxy-tree-node.cpp  proxy-tree-node.h  rooms-model.cpp  rooms-model.h  text-channel-watcher-proxy-model.cpp  (+2 more)
KTp/OTR/: CMakeLists.txt  channel-adapter.cpp  channel-adapter.h  channel-proxy-interface.cpp  channel-proxy-interface.h  constants.h  debug.cpp  debug.h  proxy-service-interface.cpp  proxy-service-interface.h  types.cpp  types.h  utils.cpp  utils.h
KTp/Widgets/: CMakeLists.txt  accounts-combo-box.cpp  accounts-combo-box.h  add-contact-dialog.cpp  add-contact-dialog.h  add-contact-dialog.ui  contact-grid-dialog.cpp  contact-grid-dialog.h  contact-grid-widget.cpp  contact-grid-widget.h  contact-info-dialog.cpp  contact-info-dialog.h  contact-view-widget.cpp  contact-view-widget.h  debug.cpp  debug.h  flat-model-proxy.h  join-chat-room-dialog.cpp  join-chat-room-dialog.h  join-chat-room-dialog.ui  notification-config-dialog.cpp  notification-config-dialog.h  notificationconfigdialog.cpp  notificationconfigdialog.h  settings-kcm-dialog.cpp  settings-kcm-dialog.h  start-chat-dialog.cpp  start-chat-dialog.h  start-chat-dialog.ui
kaccounts/: CMakeLists.txt  kaccounts-ktp-plugin.cpp  kaccounts-ktp-plugin.h  kaccountsplugin.json
kpeople/actionsplugin/: CMakeLists.txt  kpeople-actions-plugin.cpp  (+3 more)
otr-proxy/: CMakeLists.txt
tests/: CMakeLists.txt  contact-list-model-view-main.cpp  kpeople-model-view-main.cpp  model-view.cpp  model-view.h  pinned-contacts-model-view-main.cpp  roles-proxy-model.cpp  roles-proxy-model.h
(+307 files in other folders)
